add functional button Page Participants

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <select>
                 </select>
             </div>
+            <div class='showName'></div>
             <table>
                 <thead>
                     <tr>
