fixed the css of the nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -13,10 +15,10 @@
             <div class='logoMPG'>
                 <img src='images/logo.png'>
             </div> 
-            <nav>
-                <ul></ul>
-            </nav> 
         </header>
+        <nav>
+            <ul></ul>
+        </nav> 
         <div class='show'></div>
         <div class='showParticipants'></div>
         <div class='showEquipes'>
