--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <body>
         <header>
             <h1>Les Gazettes de la ligue des champions du monde</h1>
-            <div class='logoMPG'>
-                <img src='images/logo.png'>
-            </div> 
+
+                <img class='logoMPG' src='images/logo.png'>
         </header>
         <nav>
             <ul></ul>
