fixed input responsive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -21,10 +20,8 @@
         <div class='show'></div>
         <div class='showParticipants'></div>
         <div class='showEquipes'>
-            <div class='dropDownList'>
-                <select>
+                <select class='dropDownList'>
                 </select>
-            </div>
             <div class='showName'></div>
             <table>
                 <thead>
