New gazette for last week-end

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <body>
         <header>
             <h1>Les Gazettes de la ligue des champions du monde</h1>
-
-                <img class='logoMPG' src='images/logo.png'>
+            <img class='logoMPG' src='images/logo.png'>
         </header>
         <nav>
             <ul></ul>
@@ -20,8 +19,7 @@
         <div class='show'></div>
         <div class='showParticipants'></div>
         <div class='showEquipes'>
-                <select class='dropDownList'>
-                </select>
+            <select class='dropDownList'></select>
             <div class='showName'></div>
             <table>
                 <thead>
