ranking page done

--- a/index.html
+++ b/index.html
@@ -13,27 +13,44 @@
             <h1>Les Gazettes de la ligue des champions du monde</h1>
             <img class='logoMPG' src='images/logo.png'>
         </header>
-        <nav>
-            <ul></ul>
-        </nav> 
-        <div class='show'></div>
-        <div class='showParticipants'></div>
-        <div class='showEquipes'>
-            <select class='dropDownList'></select>
-            <div class='showName'></div>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Postes</th>
-                        <th>Joueurs</th>
-                        <th>Clubs</th>
-                    </tr>
-                </thead>
-                <tbody></tbody> 
-            </table>
-        </div>
-        <div class='showClassement'></div>
+        <main>
+            <nav>
+                <ul></ul>
+            </nav> 
+            <div class='show'></div>
+            <div class='showParticipants'></div>
+            <div class='showEquipes'>
+                <select class='dropDownList'></select>
+                <div class='showName'></div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Postes</th>
+                            <th>Joueurs</th>
+                            <th>Clubs</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody> 
+                </table>
+            </div>
+            <div class='showClassement'>
+                <table>
+                    <thead>
+                        <th>Pos</th>
+                        <th>Equipes</th>
+                        <th>PTS</th>
+                        <th>J</th>
+                        <th>V</th>
+                        <th>N</th>
+                        <th>D</th>
+                        <th>+/-</th>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </main>
         <script src="main.js"></script>
     </body>
+
 </html>
  
